fix: 修正swagger寫法
