# controllers/users.ts
@@ -7,10 +7,9 @@ import { registerMailSend, forgetPasswordSend } from '../service/mail';
 import { generateJwtSend } from '../service/auth';
 import { registerZod, signinZod, verifyEmailZod, resetPasswordZod } from '../zods/users';
 
+// 註冊學員
 export const register = handleErrorAsync(async (req, res, next) => {
-  //check email、password、name、confirmPassword
   let { name, email, password, confirmPassword } = req.body;
-  console.log('123234', { name, email, password, confirmPassword });
   registerZod.parse({ name, email, password, confirmPassword });
 
   //確認 email 是否已被註冊過
@@ -32,12 +31,14 @@ export const register = handleErrorAsync(async (req, res, next) => {
   await registerMailSend(email, user.id, res);
 });
 
+//登入
 export const signIn = handleErrorAsync(async (req, res, next) => {
   let { email, password } = req.body;
   signinZod.parse({ email, password });
 
-  const user = await User.findOne({ email }).select('+password');
-  if (user && (await bcrypt.compare(password, user!.password as string))) {
+  const user = await User.findOne({ email });
+  const isMatch = await bcrypt.compare(password, user!.password as string);
+  if (user && isMatch) {
     //產生 token
     generateJwtSend(user.id, res);
   } else {
@@ -45,6 +46,7 @@ export const signIn = handleErrorAsync(async (req, res, next) => {
   }
 });
 
+// 寄送Email驗證信
 export const sendVerifyEmail = handleErrorAsync(async (req, res, next) => {
   const { email } = req.body;
   verifyEmailZod.parse({ email });
@@ -59,6 +61,7 @@ export const sendVerifyEmail = handleErrorAsync(async (req, res, next) => {
   }
 });
 
+// 驗證Email
 export const verifyEmail = handleErrorAsync(async (req, res, next) => {
   const { userId } = req.params;
   const user = await User.findById(userId);
@@ -78,6 +81,7 @@ export const verifyEmail = handleErrorAsync(async (req, res, next) => {
   }
 });
 
+// 忘記密碼 寄送密碼重置信
 export const sendForgetPassword = handleErrorAsync(async (req, res, next) => {
   const { email } = req.body;
   verifyEmailZod.parse({ email });
@@ -92,6 +96,7 @@ export const sendForgetPassword = handleErrorAsync(async (req, res, next) => {
   }
 });
 
+//重設密碼
 export const resetPassword = handleErrorAsync(async (req, res, next) => {
   //reset password from forget password
   const { password, confirmPassword } = req.body;
