# routes/users.ts
@@ -12,11 +12,11 @@ import throttle from '../service/throttle';
 const router = express.Router();
 
 //user signin,signup
-router.post('/api/auth/register', register);
-router.post('/api/auth/sign-in', throttle, signIn);
-router.post('/api/auth/verify-email', sendVerifyEmail);
-router.get('/api/auth/email-link/:userId', signedMiddleware, verifyEmail);
-router.post('/api/auth/forget-password', throttle, sendForgetPassword);
-router.post('/api/auth/reset-password/:userId', signedMiddleware, resetPassword);
+router.post('/api/auth/register', register); // 註冊學員
+router.post('/api/auth/sign-in', throttle, signIn); // 登入
+router.post('/api/auth/verify-email', sendVerifyEmail); // 寄送Email驗證信
+router.get('/api/auth/email-link/:userId', signedMiddleware, verifyEmail); // 驗證Email
+router.post('/api/auth/forget-password', throttle, sendForgetPassword); // 忘記密碼
+router.post('/api/auth/reset-password/:userId', signedMiddleware, resetPassword); // 重設密碼
 
 export default router;
