# swagger-output.json
@@ -6,112 +6,238 @@
     "version": "1.0.0"
   },
   "basePath": "/",
-  "schemes": ["http"],
-  "tag": [
+  "tags": [
     {
-      "name": "Auth"
+      "name": "Auth",
+      "description": "Authentication endpoints"
     }
   ],
+  "schemes": [
+    "http",
+    "https"
+  ],
+  "securityDefinitions": {
+    "Bearer": {
+      "type": "apiKey",
+      "in": "header"
+    }
+  },
   "paths": {
     "/api/auth/register": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "summary": "註冊學員帳號",
         "description": "註冊學員帳號",
-        "tags": ["Auth"],
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
+                "type": {
                   "type": "string",
-                  "example": "user"
+                  "example": "object"
                 },
-                "email": {
-                  "type": "string",
-                  "example": "user@gmail.com"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "test1234"
-                },
-                "confirmPassword": {
-                  "type": "string",
-                  "example": "test1234"
+                "properties": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "example": {
+                          "type": "string",
+                          "example": "user"
+                        }
+                      }
+                    },
+                    "email": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "example": {
+                          "type": "string",
+                          "example": "user@gmail.com"
+                        }
+                      }
+                    },
+                    "password": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "example": {
+                          "type": "string",
+                          "example": "test1234"
+                        }
+                      }
+                    },
+                    "confirmPassword": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "example": {
+                          "type": "string",
+                          "example": "test1234"
+                        }
+                      }
+                    }
+                  }
                 }
               }
             }
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Successful operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "string",
+                  "example": "200"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "User registered successfully"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
     },
     "/api/auth/sign-in": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "summary": "登入",
         "description": "登入",
-        "tags": ["Auth"],
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "email": {
-                  "example": "any"
+                "type": {
+                  "type": "string",
+                  "example": "object"
                 },
-                "password": {
-                  "example": "any"
+                "properties": {
+                  "type": "object",
+                  "properties": {
+                    "email": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "example": {
+                          "type": "string",
+                          "example": "user@gmail.com"
+                        }
+                      }
+                    },
+                    "password": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "example": {
+                          "type": "string",
+                          "example": "test1234"
+                        }
+                      }
+                    }
+                  }
                 }
               }
             }
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Login successful"
           }
         }
       }
     },
     "/api/auth/verify-email": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "summary": "發送信箱驗證信",
         "description": "發送信箱驗證信",
-        "tags": ["Auth"],
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "email": {
-                  "example": "any"
+                "type": {
+                  "type": "string",
+                  "example": "object"
+                },
+                "properties": {
+                  "type": "object",
+                  "properties": {
+                    "email": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "example": {
+                          "type": "string",
+                          "example": "user@gmail.com"
+                        }
+                      }
+                    }
+                  }
                 }
               }
             }
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Send Verify Email successful"
           }
         }
       }
     },
     "/api/auth/email-link/{userId}": {
       "get": {
-        "summary": "驗證信箱連結",
-        "description": "驗證信箱連結",
-        "tags": ["Auth"],
+        "description": "",
         "parameters": [
           {
             "name": "userId",
@@ -139,9 +265,21 @@
     },
     "/api/auth/forget-password": {
       "post": {
-        "summary": "寄送密碼重置信",
-        "description": "寄送密碼重置信",
-        "tags": ["Auth"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "default": {
             "description": ""
@@ -151,9 +289,7 @@
     },
     "/api/auth/reset-password/{userId}": {
       "post": {
-        "summary": "重新設定密碼",
-        "description": "重新設定密碼",
-        "tags": ["Auth"],
+        "description": "",
         "parameters": [
           {
             "name": "userId",
@@ -192,5 +328,8 @@
       }
     }
   },
-  "schema": ["http", "https"]
+  "schemas": [
+    "http",
+    "https"
+  ]
 }
